@@ -166,10 +166,17 @@ EP6_OUT_Callback (void)
 
 static const uint8_t scsi_inquiry_data_00[] = { 0, 0, 0, 0, 0 };
 
+static const uint8_t scsi_inquiry_data_83[] = {
+  0x00,
+  0x83,   /* page code 0x83 */
+  0x00,   /* page length MSB */
+  0x00    /* page length LSB */
+};
+
 static const uint8_t scsi_inquiry_data[] = {
   0x00,				/* Direct Access Device.      */
   0x80,				/* RMB = 1: Removable Medium. */
-  0x05,				/* Version: SPC-3.            */
+  0x00,				/* Version: does not claim conformance.  */
   0x02,				/* Response format: SPC-3.    */
   36 - 4,			/* Additional Length.         */
   0x00,
@@ -349,10 +356,18 @@ msc_handle_command (void)
       }
     goto done;
   case SCSI_INQUIRY:
-    if (CBW.CBWCB[1] & 0x01) /* EVPD */
-      /* assume page 00 */
-      msc_send_result ((uint8_t *)&scsi_inquiry_data_00,
-		       sizeof scsi_inquiry_data_00);
+    if (CBW.CBWCB[1] & 0x01)
+      /* EVPD */
+      {
+	if (CBW.CBWCB[2] == 0x83)
+	  /* Handle the case Page Code 0x83 */
+	  msc_send_result ((uint8_t *)&scsi_inquiry_data_83,
+			   sizeof scsi_inquiry_data_83);
+	else
+	  /* Otherwise, assume page 00 */
+	  msc_send_result ((uint8_t *)&scsi_inquiry_data_00,
+			   sizeof scsi_inquiry_data_00);
+      }
     else
       msc_send_result ((uint8_t *)&scsi_inquiry_data,
 		       sizeof scsi_inquiry_data);
